--- a/src/styles/ProductInfo.scss
+++ b/src/styles/ProductInfo.scss
@@ -1,56 +1,51 @@
 @import 'vars';
 
-.ProductItem-info {
-  display: grid;
-  grid-template:
-  "image image" auto
-  "price cart" 25px
-  "name cart" 25px
-  / minmax(112px, 20vw) minmax(28px, 5vw);
-  place-content: center;
-}
-.ProductItem-info__img {
-  grid-area: image;
-  border-radius: 20px;
-  min-width: 140px;
-  min-height: 140px;
-  width: 25vw;
-  height: 25vw;
-  object-fit: cover;
-  cursor: pointer;
-}
-.ProductItem-info__img:hover {
-  border: thick solid var(--light-green);
-}
-.ProductItem-info__price,
-.ProductItem-info__name {
-  align-self: center;
-  padding-left: 8px;
-}
-.ProductItem-info__price {
-  grid-area: price;
-  font-size: var(--lg);
-  color: var(--dark-grey);
-  font-weight: bold;
-}
-.ProductItem-info__name {
-  grid-area: name;
-  font-size: var(--md);
-  color: var(--grey);
-}
-.add-to-cart {
-  grid-area: cart;
+.ProductInfo__img {
+  position: relative;
   place-self: center;
-  border-radius: 20px;
-  width: 40px;
-  height: 40px;
-  background-image: url('@assets/bt_add_to_cart.svg');
-  object-fit: contain;
-  background-position: center;
-  background-repeat: no-repeat;
+}
+#ProductInfo__image {
+  border-radius: 0 0 20px 20px;
+  width: 30vw;
+  height: 30vw;
+  max-width: 340px;
+  max-height: 300px;
+  object-fit: cover;
+  object-position: center;
+}
+.ProductInfo_close {
+  position: absolute;
+  top: 8px;
+  left: 8px;
+  display: grid;
+  place-content: center;
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  fill: var(--dark-green);
+  background-color: var(--white);
   cursor: pointer;
 }
-.add-to-cart:hover {
-  background-image: url('@assets/bt_add_to_cart_hover.svg');
+.ProductInfo_close:hover {
+  fill: var(--white);
   background-color: var(--light-green);
+}
+.ProductInfo__price,
+.ProductInfo__name {
+  margin: 8px 0 4px 40px;
+}
+.ProductInfo__price {
+  font-weight: bold;
+  color: var(--dark-grey);
+  font-size: var(--lg);
+}
+.ProductInfo__name {
+  color: var(--grey);
+  font-size: var(--md);
+}
+.ProductInfo__description {
+  margin: 8px 40px 20px 40px;
+  color: var(--grey);
+  font-size: var(--sm);
+  text-align: justify;
 }
